prod/demo/deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
    visualize: "true"
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
        visualize: "true"
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: web
        image: goober/kubernetes-demo:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 1
          periodSeconds: 2
          failureThreshold: 1
        readinessProbe:
          # an http probe
          httpGet:
            path: /
            port: 80
          # length of time to wait for a pod to initialize
          # after pod startup, before applying health checking
          initialDelaySeconds: 3
          timeoutSeconds: 1
