prod/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo
    visualize: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
  selector:
    app: demo
